# REPLUG

./: README.md  generate_passage_embeddings.py  models.py  pyproject.toml  retriever.py  save_logprob_data.py  utils.py
LSR_finetune/: replug_lsr.py  utils.py
data/: text.jsonl
data/embeddings/: index.faiss  index_meta.faiss  passages_00
downstream_eval/: argument.py  mmlu_final.py  qa_final.py  utils.py
index_utils/: beir_utils.py  contriever.py  data_contriever.py  dist_utils.py  dragon.py  index.py  moco.py  options.py  utils.py
preset_configs/: bloom-1b1.json  bloom-1b7.json  bloom-3b.json  bloom-560m.json  bloom-7b1.json  gpt2_medium.json  opt-1.3b.json  opt-125m.json  opt-13b.json  opt-2.7b.json  opt-30b.json  opt-350m.json  opt-6.7b.json  opt-66b.json
scripts/: compute_mmlu_cat_results.py  compute_mmlu_text_davinci_results.py
tests/: test_retriever.py
